--- a/1markup.html
+++ b/1markup.html
@@ -21,6 +21,10 @@
             P Tags are for paragraphs. Strong and em tags make text <Strong>bold</Strong> and 
             <em>italic</em> , respectively.  Likewise, you can use sup and sub tags make text <sub>superscript</sub>, or a q tags for short <q>qouts</q>.</p>
         </blockquote>
+          You should use blockquote tags for long quotations, <br>
+          a br tag for a line break, and an hr tag for a horizontal rule.<br>
+          These are known as self-closing, because they don't have a closing tag.
+        </blockquote>
         <hr>
         <p><abbr title="for your information">F.Y.I</abbr> the abbr tag is for abbreviations, the cite tag is for <cite>title of works</cite> by some authors, you can also show that text has been  <del>deleted</del> or <ins>inserted</ins>, or you can just makke a <s>Strikthrough </s> using the s tag.</p>
         <!--Lastly,HTML comments are hidden-->
